Refactor exceptions in CidadeResources.