@@ -1,5 +1,6 @@
 package io.algafoodapi.domain.service;
 
+import io.algafoodapi.domain.exception.EntidadeEmUsoException;
 import io.algafoodapi.domain.exception.EntidadeNaoEncontradaException;
 import io.algafoodapi.domain.exception.RequisicaoMalFormuladaException;
 import io.algafoodapi.domain.model.Cidade;
@@ -7,13 +8,19 @@ import io.algafoodapi.domain.model.Estado;
 import io.algafoodapi.domain.repository.CidadeRepository;
 import org.springframework.beans.BeanUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.stereotype.Service;
 
+import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public final class CidadeService {
+
+    public static final String NÃO_ENCONTRADA_CIDADE_COM_ID = "Não encontrada cidade com código %d.";
+    public static final String PROIBIDO_APAGAR_CIDADE_EM_USO_COM_ID = "Proibido apagar cidade em uso. Código: %d.";
 
     @Autowired
     private CidadeRepository cidadeRepository;
@@ -21,27 +28,20 @@ public final class CidadeService {
     @Autowired
     private EstadoService estadoService;
 
-    public Cidade salvar(Cidade cidade) throws EntidadeNaoEncontradaException {
+    public Cidade criar(Cidade cidade) {
 
-        var estadoId = cidade.getEstado().getId();
-        var estado = this.estadoService.consultarPorId(estadoId);
+        var estado = this.estadoService.consultarPorId(cidade.getEstado().getId());
         cidade.setEstado(estado);
 
         return this.cidadeRepository.saveAndFlush(cidade);
     }
 
-    public Cidade atualizar(Long id, Cidade cidadeAtual) throws EntidadeNaoEncontradaException, RequisicaoMalFormuladaException {
+    public Cidade atualizar(Long id, Cidade cidadeAtual) {
 
         var cidade = this.consultarPorId(id);
-
-        Estado estado;
-        try {
-            estado = this.estadoService.consultarPorId(cidadeAtual.getEstado().getId());
-        } catch (EntidadeNaoEncontradaException naoEncontradaException) {
-            throw new RequisicaoMalFormuladaException(naoEncontradaException.getMessage());
-        }
-
+        var estado = this.estadoService.consultarPorId(cidadeAtual.getEstado().getId());
         cidadeAtual.setEstado(estado);
+
         BeanUtils.copyProperties(cidadeAtual, cidade, "id");
 
         return this.cidadeRepository.saveAndFlush(cidade);
@@ -53,21 +53,25 @@ public final class CidadeService {
             this.cidadeRepository.deleteById(id);
 
         } catch (EmptyResultDataAccessException dataAccessException) {
-            throw new EntidadeNaoEncontradaException("""
-                    Não encontrada cidade com código %d.""".formatted(id));
+            throw new EntidadeNaoEncontradaException(String.format(NÃO_ENCONTRADA_CIDADE_COM_ID, id));
+        } catch (DataIntegrityViolationException dataIntegrityViolationException) {
+            throw new EntidadeEmUsoException(String.format(PROIBIDO_APAGAR_CIDADE_EM_USO_COM_ID, id));
         }
     }
 
     public Cidade consultarPorId(Long id) {
 
         return this.cidadeRepository.findById(id)
-                .orElseThrow(() -> new EntidadeNaoEncontradaException("""
-                    Não encontrada cidade com código %d.""".formatted(id)));
+                .orElseThrow(() -> new EntidadeNaoEncontradaException(
+                    String.format(NÃO_ENCONTRADA_CIDADE_COM_ID, id)));
     }
 
     public List<Cidade> buscarTodos() {
 
-        var cidades = this.cidadeRepository.findAll();
+        var cidades = this.cidadeRepository.findAll()
+                .stream()
+                .sorted(Comparator.comparing(Cidade::getId).reversed())
+                .collect(Collectors.toList());
 
         if(cidades.isEmpty())
             throw new EntidadeNaoEncontradaException(String.format("Não há cidades cadastradas no banco de dados."));
@@ -75,3 +79,4 @@ public final class CidadeService {
         return cidades;
     }
 }
+
